Fix alignment for slider and columns

--- a/css/style.css
+++ b/css/style.css
@@ -127,7 +127,6 @@ body {
     padding: 15px 4px 3px 4px;
     border: solid 1px #CCC;
     border-shadow: top;
-    margin: 3%;
 }
 
 h5{
